--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "messageme-desktop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://joeyjiron06.github.io/messageme-desktop",
   "dependencies": {
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
