--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,12 @@ env:
 cache:
   directories:
     - "node_modules"
-    
+
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
+  local-dir: build
   on:
     branch: master
