updated navbar with menu

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "messageme-desktop",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
   "private": true,
   "homepage": "https://joeyjiron06.github.io/messageme-desktop",
   "dependencies": {
